--- a/package.json
+++ b/package.json
@@ -14,12 +14,14 @@
     "@emotion/styled": "^11.11.5",
     "@mui/material": "^5.15.19",
     "@mui/material-nextjs": "^5.15.11",
+    "@mui/x-data-grid": "^7.6.2",
     "@next/bundle-analyzer": "^14.2.3",
     "next": "14.2.3",
     "next-auth": "^5.0.0-beta.19",
     "react": "^18",
     "react-bootstrap-icons": "^1.11.4",
-    "react-dom": "^18"
+    "react-dom": "^18",
+    "react-number-format": "^5.4.0"
   },
   "devDependencies": {
     "@types/node": "^20",
