--- a/package.json
+++ b/package.json
@@ -6,7 +6,9 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "test": "jest",
+    "test:watch": "jest --watch"
   },
   "dependencies": {
     "@apollo/client": "^3.10.5",
@@ -18,20 +20,30 @@
     "@mui/material-nextjs": "^5.15.11",
     "@mui/x-data-grid": "^7.6.2",
     "@next/bundle-analyzer": "^14.2.3",
+    "@types/lodash": "^4.17.5",
+    "@types/papaparse": "^5.3.14",
+    "lodash": "^4.17.21",
     "next": "14.2.3",
     "next-auth": "^5.0.0-beta.19",
-    "react": "^18",
+    "papaparse": "^5.4.1",
+    "react": "^18.2.0",
     "react-bootstrap-icons": "^1.11.4",
-    "react-dom": "^18",
+    "react-dom": "^18.2.0",
     "react-number-format": "^5.4.0"
   },
   "devDependencies": {
+    "@testing-library/jest-dom": "^6.4.6",
+    "@testing-library/react": "^16.0.0",
+    "@types/jest": "^29.5.12",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
     "eslint": "^8",
     "eslint-config-next": "14.2.3",
     "eslint-config-prettier": "^9.1.0",
+    "jest": "^29.7.0",
+    "jest-environment-jsdom": "^29.7.0",
+    "ts-node": "^10.9.2",
     "typescript": "^5"
   }
 }
