--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "@types/lodash": "^4.17.5",
     "@types/papaparse": "^5.3.14",
     "docker-secret": "^2.0.6",
+    "js-cookie": "^3.0.5",
     "lodash": "^4.17.21",
     "next": "14.2.3",
     "next-auth": "^5.0.0-beta.19",
@@ -51,6 +52,7 @@
     "@testing-library/jest-dom": "^6.4.6",
     "@testing-library/react": "^16.0.0",
     "@types/jest": "^29.5.12",
+    "@types/js-cookie": "^3.0.6",
     "@types/node": "^20.17.6",
     "@types/react": "^18",
     "@types/react-dom": "^18",
