--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "react-bootstrap-icons": "^1.11.4",
     "react-dom": "^18.2.0",
     "react-number-format": "^5.4.0",
+    "serialize-error": "^12.0.0",
     "sharp": "^0.33.4",
     "zustand": "^4.5.4"
   },
