--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -13,11 +13,22 @@ jobs:
       DOCKER_USERNAME: ${{ secrets.DOCKER_USERNAME }}
       DOCKER_PASSWORD: ${{ secrets.DOCKER_PASSWORD }}
 
+  # test:
+  #   needs: [build]
+  #   uses: ./.github/workflows/e2e-image.yaml
+  #   with:
+  #     image: ${{ needs.build.outputs.image }}:${{ needs.build.outputs.image_tag }}
+  #     backend_base_url: https://api.paths.kausal.dev
+  #     build_id: ${{ needs.build.outputs.build_id }}
+  #     s3_endpoint: ${{ vars.BUILD_S3_ENDPOINT }}
+  #     s3_bucket: ${{ vars.BUILD_S3_BUCKET }}
+  #   secrets: inherit
+
   deploy:
     needs: [build]
     uses: kausaltech/github-actions/.github/workflows/deploy.yaml@main
     secrets:
-      gitops_pat: ${{ secrets.GHA_GITOPS_PAT }}
+      gitops_ssh_key: ${{ secrets.GITOPS_SSH_KEY }}
     if: needs.build.outputs.deployment_env
     with:
       docker_image_repo: ${{ needs.build.outputs.image }}
