--- a/.github/workflows/kausal-ci.yaml
+++ b/.github/workflows/kausal-ci.yaml
@@ -10,6 +10,8 @@ jobs:
     secrets:
       SENTRY_AUTH_TOKEN: ${{ secrets.SENTRY_AUTH_TOKEN }}
       NPM_TOKEN: ${{ secrets.NPM_TOKEN }}
+      NPM_USER: ${{ secrets.NPM_USER }}
+      NPM_PASSWORD: ${{ secrets.NPM_PASSWORD }}
       DOCKER_USERNAME: ${{ secrets.DOCKER_USERNAME }}
       DOCKER_PASSWORD: ${{ secrets.DOCKER_PASSWORD }}
 
@@ -17,7 +19,7 @@ jobs:
     needs: [build]
     uses: kausaltech/github-actions/.github/workflows/deploy.yaml@main
     secrets:
-      gitops_pat: ${{ secrets.GHA_GITOPS_PAT }}
+      gitops_ssh_key: ${{ secrets.GITOPS_SSH_KEY }}
     if: needs.build.outputs.deployment_env
     with:
       docker_image_repo: ${{ needs.build.outputs.image }}
