--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "@kausal/nzc-data-studio",
   "version": "0.1.0",
   "private": true,
-  "packageManager": "npm@11.4.1",
+  "packageManager": "npm@11.4.2",
   "type": "module",
   "scripts": {
     "dev": "next dev",
@@ -13,29 +13,29 @@
     "prettier:fix": "prettier --write .",
     "test": "jest",
     "test:watch": "jest --watch",
-    "graphql-codegen": "graphql-codegen --config config/codegen.ts"
+    "graphql-codegen": "graphql-codegen --config src/config/codegen.ts"
   },
   "dependencies": {
     "@apollo/client": "^3.13.8",
     "@apollo/client-integration-nextjs": "^0.12.2",
     "@emotion/cache": "^11.14.0",
     "@emotion/react": "^11.14.0",
-    "@emotion/styled": "^11.14.0",
-    "@mui/material": "^7.1.0",
-    "@mui/material-nextjs": "^7.1.1",
-    "@mui/x-data-grid": "^8.4.0",
-    "@next/bundle-analyzer": "^15.3.3",
+    "@emotion/styled": "^11.14.1",
+    "@mui/material": "^7.2.0",
+    "@mui/material-nextjs": "^7.2.0",
+    "@mui/x-data-grid": "^8.7.0",
+    "@next/bundle-analyzer": "^15.3.5",
     "@opentelemetry/sdk-trace-base": "^1",
     "@opentelemetry/sdk-trace-node": "^1",
-    "@sentry/nextjs": "^9.27.0",
-    "@types/lodash": "^4.17.17",
+    "@sentry/nextjs": "^9.35.0",
+    "@types/lodash": "^4.17.20",
     "@types/papaparse": "^5.3.16",
     "cookie": "^1.0.2",
     "dayjs": "^1.11.13",
     "docker-secret": "^2.0.6",
     "js-cookie": "^3.0.5",
     "lodash": "^4.17.21",
-    "next": "15.3.3",
+    "next": "15.3.5",
     "next-auth": "^5.0.0-beta.28",
     "papaparse": "^5.5.3",
     "pino": "^9.7.0",
@@ -47,38 +47,38 @@
     "serialize-error": "^12.0.0",
     "set-cookie-parser": "^2.7.1",
     "sharp": "^0.34.2",
-    "zustand": "^5.0.5"
+    "zustand": "^5.0.6"
   },
   "devDependencies": {
-    "@graphql-codegen/cli": "^5.0.6",
+    "@graphql-codegen/cli": "^5.0.7",
     "@graphql-codegen/fragment-matcher": "^5.1.0",
     "@graphql-codegen/introspection": "^4.0.3",
     "@graphql-codegen/typescript": "^4.1.6",
     "@graphql-codegen/typescript-operations": "^4.6.1",
-    "@graphql-codegen/typescript-react-apollo": "^4.3.2",
-    "@sentry/opentelemetry": "^9.27.0",
+    "@graphql-codegen/typescript-react-apollo": "^4.3.3",
+    "@sentry/opentelemetry": "^9.35.0",
     "@testing-library/jest-dom": "^6.6.3",
     "@testing-library/react": "^16.3.0",
     "@trivago/prettier-plugin-sort-imports": "^5.2.2",
-    "@types/jest": "^29.5.14",
+    "@types/jest": "^30.0.0",
     "@types/js-cookie": "^3.0.6",
-    "@types/node": "^22.15.21",
+    "@types/node": "^24.0.10",
     "@types/react": "^19",
     "@types/react-dom": "^19",
     "@types/set-cookie-parser": "^2.4.10",
     "babel-plugin-react-compiler": "^19.1.0-rc.2",
-    "dotenv": "^16.5.0",
+    "dotenv": "^17.1.0",
     "eslint": "^9",
-    "eslint-config-next": "15.3.3",
+    "eslint-config-next": "15.3.5",
     "eslint-config-prettier": "^10.1.5",
     "eslint-plugin-react-compiler": "^19.1.0-rc.2",
-    "jest": "^29.7.0",
-    "jest-environment-jsdom": "^29.7.0",
-    "prettier": "^3.5.3",
+    "jest": "^30.0.4",
+    "jest-environment-jsdom": "^30.0.4",
+    "prettier": "^3.6.2",
     "source-map-loader": "^5.0.0",
     "ts-node": "^10.9.2",
     "typescript": "^5",
-    "typescript-eslint": "^8.32.1"
+    "typescript-eslint": "^8.36.0"
   },
   "importSorter": {
     "maxLineLength": 100,
