--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
     "zustand": "^5.0.6"
   },
   "devDependencies": {
+    "@cyclonedx/webpack-plugin": "^5.1.0",
     "@graphql-codegen/cli": "^5.0.7",
     "@graphql-codegen/fragment-matcher": "^5.1.0",
     "@graphql-codegen/introspection": "^4.0.3",
