--- a/package.json
+++ b/package.json
@@ -35,7 +35,7 @@
     "docker-secret": "^2.0.6",
     "js-cookie": "^3.0.5",
     "lodash": "^4.17.21",
-    "next": "15.3.5",
+    "next": "~15.3.5",
     "next-auth": "^5.0.0-beta.28",
     "papaparse": "^5.5.3",
     "pino": "^9.7.0",
